# C-Student-Assessment-System

./: CMakeLists.txt  README.md
StudentAssessmentSystem/include/: Analytics.h  Assessment.h  Assignment.h  Course.h  DataManager.h  Exam.h  Quiz.h  Student.h
StudentAssessmentSystem/src/: Course.cpp  DataManager.cpp  GUI.cpp  Student.cpp  main.cpp
